; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/gpio/extr_gpiolib.c_gpio_set_value_cansleep.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/gpio/extr_gpiolib.c_gpio_set_value_cansleep.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.gpio_chip = type { i32, i32 (%struct.gpio_chip*, i32, i32)* }

@extra_checks = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @gpio_set_value_cansleep(i32 %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca %struct.gpio_chip*, align 8
  store i32 %0, i32* %3, align 4
  store i32 %1, i32* %4, align 4
  %6 = load i32, i32* @extra_checks, align 4
  %7 = call i32 @might_sleep_if(i32 %6)
  %8 = load i32, i32* %3, align 4
  %9 = call %struct.gpio_chip* @gpio_to_chip(i32 %8)
  store %struct.gpio_chip* %9, %struct.gpio_chip** %5, align 8
  %10 = load %struct.gpio_chip*, %struct.gpio_chip** %5, align 8
  %11 = getelementptr inbounds %struct.gpio_chip, %struct.gpio_chip* %10, i32 0, i32 1
  %12 = load i32 (%struct.gpio_chip*, i32, i32)*, i32 (%struct.gpio_chip*, i32, i32)** %11, align 8
  %13 = load %struct.gpio_chip*, %struct.gpio_chip** %5, align 8
  %14 = load i32, i32* %3, align 4
  %15 = load %struct.gpio_chip*, %struct.gpio_chip** %5, align 8
  %16 = getelementptr inbounds %struct.gpio_chip, %struct.gpio_chip* %15, i32 0, i32 0
  %17 = load i32, i32* %16, align 8
  %18 = sub i32 %14, %17
  %19 = load i32, i32* %4, align 4
  %20 = call i32 %12(%struct.gpio_chip* %13, i32 %18, i32 %19)
  ret void
}

declare dso_local i32 @might_sleep_if(i32) #1

declare dso_local %struct.gpio_chip* @gpio_to_chip(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
